--- a/tp-maven-docker/pom.xml
+++ b/tp-maven-docker/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>fr.isika.al</groupId>
 	<artifactId>tp-maven-docker</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>tp-maven-docker</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
