--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,51 @@
-/.metadata/
+# Maven specific
+target/
+!.mvn/wrapper/maven-wrapper.jar
+
+# IDE specific
+.idea/
+*.iml
+*.iws
+*.ipr
+*.class
+
+# Eclipse specific
+bin/
+.settings/
+.classpath
+.project
+
+# NetBeans specific
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+# VS Code specific
+.vscode/
+
+# Intellij specific
+*.iml
+*.ipr
+*.iws
+.idea/
+out/
+
+# Logs
+logs/
+*.log*
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Dependencies
+*.jar
+
+# Maven war plugin
+targetWar/
+
+# Maven release plugin
+release.properties
